@@ -1,3 +1,6 @@
+2013-08-23 arnaud.fontaine
+* ZODB Components: Shorten ID by removing common erp5.component prefix.
+
 2013-08-20 arnaud.fontaine
 * ZODB Components: Add field to specify the object paths whose only last workflow history must be kept.
 
